# penny4

./: .gitignore  BUILD_EXE_GUIDE.md  BUILD_STANDALONE_EXE.md  CLAUDE.md  DOCKER_VS_NO_DOCKER.md  EASY_EXE_GUIDE.txt  EXE_BUILD_README.md  HOW_TO_SHARE_WITH_FRIENDS.md  INSTRUCTIONS_FOR_TEAMMATE.md  MediaCrawlerPro.bat  MediaCrawlerPro_START.bat  MediaCrawlerPro_Simple.bat  PORTABLE_SOLUTION.md  QUICK_START.md  QUICK_START_FOR_YOU.md  README.md  README_FOR_USERS.txt  README_STANDALONE.md  SERVER_DEPLOYMENT_GUIDE.md  SERVER_QUICK_START.md  SETUP_GUIDE.md  STOP_MediaCrawler.bat  TEAMMATE_SETUP_GUIDE.md  USER_README.txt  WHICH_VERSION_TO_BUILD.md  async_db.py  build_and_package.bat  build_exe.py  build_exe_optimized.py  build_standalone_no_docker.py  build_standalone_nodock.py  check_setup.py  create_exe.py  create_portable_launcher.py  db.py  docker-compose.yaml  launcher.py  main.py  package_for_distribution.py  pyproject.toml  (+7 more)
.github/ISSUE_TEMPLATE/: bug_report.md  quesiton.md
base/: base_crawler.py
cmd_arg/: arg.py
config/: README.md  accounts_cookies.xlsx  base_config.py  db_config.py  proxy_config.py
constant/: __init__.py  baidu_tieba.py  base_constant.py  bilibili.py  douyin.py  xiaohongshu.py  zhihu.py
docs/: 断点续爬系统文档.md
media_platform/bilibili/: client.py  core.py  extractor.py  (+1 more)
model/: m_baidu_tieba.py  m_bilibili.py  m_checkpoint.py  m_douyin.py  m_kuaishou.py  m_weibo.py  m_xhs.py  m_xiaohongshu.py  m_zhihu.py
schema/: 20240913_ddl.sql  tables.sql
test/: test_expiring_local_cache.py  test_proxy_ip_pool.py  test_redis_cache.py  test_utils.py
(+110 files in other folders)
